--- a/src/GensouSakuya.KookBot/GensouSakuya.KookBot.App/GensouSakuya.KookBot.App.csproj
+++ b/src/GensouSakuya.KookBot/GensouSakuya.KookBot.App/GensouSakuya.KookBot.App.csproj
@@ -11,9 +11,11 @@
     <PackageReference Include="Kook.Net" Version="0.6.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+    <PackageReference Include="System.Reactive" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
